Make buttons borderless, Add constraints to TableLayout and TextView, Add weight to buttons, Change text color of buttons, Change layout_width to 0dp

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
     <string name="point">.</string>
     <string name="equals">=</string>
 
-    <string name="backspace"> </string>
+    <string name="backspace"></string>
+
+    <string name="display">Enter a value</string>
 
 </resources>
